# pokemaster

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
news/: 24.dev  25.bugfix  TEMPLATE
newsfragments/: 12.feature  13.bugfix  15.feature  17.feature  18.feature  21.bugfix  23.feature
pokemaster/: __init__.py  __version__.py  _database.py  battle.py  battle_engine.py  charset.py  database.py  dex.py  exceptions.py  game_version.py  move_effects.py  moves.py  pokemon.py  prng.py  query.py  session.py  stats.py  trainer.py  weather.py
pokemaster/cli/: _search.py  main.py
tests/: test_charsets.py  test_database.py  test_game_version.py  test_moves.py  test_pokemon.py  test_prng.py  test_query.py  test_session.py  test_stats.py  test_weather.py
